2024-02-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* --terse option. Minor bug fixes.

0.01 Initial release